# blry

./: .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  docker-compose.yml  eslint.config.js  package.json  pyproject.toml
.github/: pull_request_template.md
backend/: Dockerfile  manage.py  pyproject.toml
backend/accounts/: serializers.py  urls.py  views.py
backend/api/: urls.py  views.py
backend/blry_website/: settings.py  urls.py
blry_website/: asgi.py  settings.py  wsgi.py
docs/: tooling-setup.md
frontend/: .env.example  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: Footer.css  Footer.jsx  Header.css  Header.jsx
frontend/src/components/__tests__/: Footer.test.jsx  Header.test.jsx
frontend/src/config/: env.js
frontend/src/config/__tests__/: env.test.js
frontend/src/layouts/: Layout.css  Layout.jsx
frontend/src/pages/: About.css  About.jsx  Contact.css  Contact.jsx  Home.css  Home.jsx
frontend/src/pages/__tests__/: Contact.test.jsx  Home.test.jsx
frontend/src/test/: README.md  setup.js
scripts/: check_project_consistency.py
