[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
# TODO(FlyCloud): replace it with the team dev email
authors = ["BLRY Dev Team <fly.cloud.blry@gmail.com>"]
package-mode = false  # disables package install step

[tool.poetry.dependencies]
python = ">=3.10"
django = "^5.2"
djangorestframework = ">=3.16.0,<4.0.0"
djangorestframework-simplejwt = "^5.3.0"
django-cors-headers = ">=4.7.0,<5.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_django = "django"
known_first_party = "blry"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
